// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserService /> <Create /> should create a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Delete /> should delete a user successfully 1`] = `
{
  "message": "User deleted successfully",
}
`;

exports[`<UserService /> <FindAll /> should search for a list of users  1`] = `
{
  "count": 1,
  "users": [
    {
      "id": "f-3wds",
      "name": "John Doe",
      "profileImg": "http://profileImg.com",
      "username": "jD",
    },
  ],
}
`;

exports[`<UserService /> <FindOne /> should return a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`<UserService /> <Update /> should update a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "email": "jdoe@me.com",
  "id": "42-d-f-df4",
  "name": "John Doe",
  "password": "new_password",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;
